@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix PDF support detection for Firefox PDF.js (#1488972)
 - Fix messages list focus issue in Internet Explorer (#1489058)
 - Add db_prefix configuration option in place of db_table_*/db_sequence_* options
 - Make possible to use db_prefix for schema initialization in Installer (#1489067)
